--- a/latex/chapter-conclusions.tex
+++ b/latex/chapter-conclusions.tex
@@ -10,8 +10,7 @@ Eventually this functionality will be delivered directly by the browser without 
 %shadow DOM\index{Shadow DOM}, 
 %templates\index{HTML!Templates}, and 
 %the component import system\index{HTML!Imports}.
-But for the immediate future, using Web Components in your application means that your clients must download a large blob of JavaScript library code -- the polyfill\index{polyfill} --- 
-to enable its features: 
+But for the immediate future, using Web Components in your application means that your clients must download a large blob of JavaScript library code---the polyfill\index{polyfill}---to enable its features: 
 Custom Elements\index{Custom Elements}, 
 shadow DOM\index{Shadow DOM}, 
 templates\index{HTML!Templates}, and 
