--- a/latex/codelistings.tex
+++ b/latex/codelistings.tex
@@ -59,14 +59,14 @@
 	<a, </a,
   % More tags...
   <canvas, /canvas>, <svg, <rect, <animateTransform, </rect>, </svg>, <video, <source, <iframe, </iframe, </video, <image, </image>, <template, </template, <my-element, </my-element,
-  <speakur-discussion, </speakur-discussion, <twbs-navbar, </twbs-navbar, <firebase-element, </firebase-element
+  <speakur-discussion, </speakur-discussion, <twbs-navbar, </twbs-navbar, <firebase-element, </firebase-element, <nav, </nav, <button, </button, <span, </span, <ul, </ul, <li, </li
   },
   ndkeywords={
   % General
   =,
   % HTML attributes
   charset=, src=, id=, width=, height=, style=, type=, rel=, href=,
-  firebaseLocation=, xtitle=, initiallyOpen=, allowAnonymous=, location=, data=, on-click=,
+  firebaseLocation=, xtitle=, initiallyOpen=, allowAnonymous=, location=, data=, on-click=, class=,
   % SVG attributes
   fill=, attributeName=, begin=, dur=, from=, to=, poster=, controls=, x=, y=, repeatCount=, xlink:href=,
   % CSS properties
