--- a/latex/utdiss2.sty
+++ b/latex/utdiss2.sty
@@ -296,11 +296,11 @@
     \setcounter{section}{0}
     \def\@chapapp{\appendixname}
     \chap@or@app=2
-%   \def\thechapter{\Alph{chapter}}}	% Commented out 15 Aug 02	cwm
+   \def\thechapter{\Alph{chapter}}}	% Commented out 15 Aug 02	cwm
 					% as a partial solution to
 					% the problem of labeling
 					% one appendix as Appendix A.
-    }
+%    }
 
 \def\appendices{\clearpage
     \typeout{Appendices.}
