--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -8,7 +8,7 @@ It is primarily a client side application with no dedicated server component oth
 It is delivered as a single Custom Element\index{Custom Elements}, \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
 You import the tag with \tcode{<link rel=import href=...>} to make it available to place on the page. 
 This element has a data-bound\index{data-bound template} \tcode{<template>}\index{<template>} that provides the element's visual representation (shadow DOM).
-Actually, a custom element's representation, or logical DOM\index{Logical DOM}, may consist of both encapsulated shadow DOM\index{Shadow DOM} as well as light DOM\index{Light DOM} that is supplied by the \textit{user} of the custom element and \textit{projected} into the shadow DOM as discussed in section~\ref{bg:shadowdom}.
+Actually, a custom element's representation, or logical DOM\index{Logical DOM}, may consist of both encapsulated shadow DOM\index{Shadow DOM} as well as light DOM\index{Light DOM} that is supplied by the \textit{user} of the custom element and \textit{projected} into the shadow DOM as discussed in~\cref{bg:shadowdom}.
 In Speakur's case, the discussion forum is self-contained in terms of content; light DOM is not needed or used in the top-level element.
 Speakur's\index{Speakur} options or parameters are controlled with attributes\index{HTML!attributes} like this:
 
@@ -33,7 +33,7 @@ Speakur's\index{Speakur} options or parameters are controlled with attributes\in
 \label{sec:layout}
 
 Structurally, Speakur\index{Speakur} consists of JavaScript\index{JavaScript}, HTML, and CSS\index{CSS} files, along with a few other resource types like images and JSON\index{JSON} language files. 
-All of the these internal resources and components are hidden from consumers who only have to import and place the main \tcode{<speakur-discussion>}\index{<speakur-discussion>} element as discussed in section~\ref{publishing} below.
+All of the these internal resources and components are hidden from consumers who only have to import and place the main \tcode{<speakur-discussion>}\index{<speakur-discussion>} element as discussed in~\cref{publishing} on~\cpageref{publishing}.
 The rest of the components are brought in by internal imports inside \tcode{<speakur-discussion>}\index{<speakur-discussion>}.
 
 \begin{table}\centering
@@ -69,7 +69,7 @@ Name & Function \\
 \label{table:speakurcomponents}
 \end{table}
 
-Internally, Speakur\index{Speakur} is composed of a number of sub-components, a partial list of which is found in Table~\ref{table:speakurcomponents}. 
+Internally, Speakur\index{Speakur} is composed of a number of sub-components, a partial list of which is found in~\cref{table:speakurcomponents}. 
 These components are listed in three broad categories: structural containers, 
 logical services, 
 and user interface\index{user interface (UI)} elements.
@@ -84,14 +84,14 @@ For example, the Firebase\index{Firebase} client library is a general purpose Ja
 For this reason the Polymer project maintains \tcode{<firebase-element>}\index{<firebase-element>} as a wrapper around the main Firebase library~\cite{polymercontributors2015-c}.
 Within Speakur, each component gets its data either directly from its own internal \tcode{<firebase-element>}\index{<firebase-element>}, or else from a data binding from an immediate parent element that has its own \tcode{<firebase-element>}\index{<firebase-element>}.
 
-Figure~\ref{f:file_layout} shows a partial listing of the internal component files.
+\Cref{f:file_layout} shows a partial listing of the internal component files.
 One of these is abstraction layer for an internationalization\index{internationalization} library.
 Following the \tcode{<firebase-element>}\index{<firebase-element>} example, 
 I created a simple custom element wrapper around the \textbf{i18next} 
 JavaScript\index{JavaScript} library~\cite{i18nextcontributors2015}.
 This wrapper is called \tcode{<speakur-i18next>}\index{<speakur-i18next>}. 
 It tells i18next where to find Speakur's translation files and creates a Polymer \textit{filter} to perform translations from data-bound templates\index{data-bound template}. 
-See section~\ref{sec:i18n} below for details.
+See~\cref{sec:i18n} below for details.
 Logical elements are also used to provide abstract `controllers' 
 (in the MVC\index{model-view-controller} sense), 
 facades, pseudo-OOP\index{object oriented programming (OOP)} base classes and other design patterns.
@@ -125,8 +125,7 @@ Although composition or \textit{has-a} relationships are generally preferred, in
 Speakur uses Firebase for NoSQL\index{NoSQL}-style database storage.
 Traditional relational databases\index{relational database} (SQL\index{SQL}) have emphasized data normalization\index{normalization (database)} -- the removal of informational redundancies from databases such that a given \textit{fact} is only recorded in a single place.
 While this helps ensure data integrity, it can adversely affect query time and scalability as additional joins are required to bring in the necessary facts.
-One of the defining characteristics of the NoSQL movement is denormalization\index{denormalization}
---- that is, the principle of eliminating redundancy is sacrificed in order to gain performance~\cite{sadalage2012}.
+One of the defining characteristics of the NoSQL movement is denormalization\index{denormalization}---that is, the principle of eliminating redundancy is sacrificed in order to gain performance~\cite{sadalage2012}.
 Facts can be defined in more than one place to speed up queries.
 
 For example, some information about a post's author 
@@ -169,7 +168,7 @@ a given record is not guaranteed to follow any particular structure unless this 
 \label{f:firebase_admin_posts}
 \end{figure}
 
-The key structure column in Table~\ref{table:speakurtables} signifies the meaning of the keys underneath a table. 
+The key structure column in~\cref{table:speakurtables} signifies the meaning of the keys underneath a table. 
 For example, the main \tcode{posts} table has a \tcode{\$parent->\$child} key structure.
 The first layer of keys beneath \tcode{posts} are post \textit{parent} ids: 
 the id of the post that this is a reply to,
@@ -178,12 +177,12 @@ The next object down the key hierarchy is the \textit{child} id,
 which is the id of the actual post itself.
 The keys beneath that are the `fields' of the table, 
 such as the \tcode{text} and \tcode{replyTo} values.
-Figure~\ref{f:firebase_admin_posts} shows Firebase's administrative view of the database where the \tcode{posts} table is expanded, 
-showing the parent and child id layers, 
-and the actual post nested within.
+\Cref{f:firebase_admin_posts} shows Firebase's administrative view of the database.
+The \tcode{posts} table is expanded, 
+showing the parent and child id layers and the actual post object nested within.
 Deeply nested data structures are not good for scalability; 
 relatively flat tables are best~\cite{firebasecontributors2015,sadalage2012}.
-The key structure will become important when we apply security rules in section~\ref{sec:security}.
+The key structure will become important when we apply security rules in~\cref{sec:security}.
 
 
 In addition to denormalizing\index{denormalization} the data as necessary, sometimes it is convenient for security reasons to 
@@ -199,9 +198,9 @@ we can always recalculate the true count later using the individual user vote re
 \label{sec:sync}
 
 Speakur\index{Speakur} consists of a number of Polymer\index{Polymer} components which break down the problem of presenting a discussion forum into smaller tasks.
-Some of these components are listed in Table~\ref{table:speakurcomponents}.
+Some of these components are listed in~\cref{table:speakurcomponents}.
 They form a hierarchy with \tcode{<speakur-discussion>}\index{<speakur-discussion>} at the top (root). 
-Figure~\ref{f:component_layout} illustrates this, with many components omitted for brevity.
+\Cref{f:component_layout} illustrates this, with many components omitted for brevity.
 
 \begin{figure}[htb]
 	\centerline{\includegraphics[width=6in]{images/components.png}}
@@ -232,7 +231,7 @@ Using \tcode{<firebase-element>}\index{<firebase-element>} isolates each compone
 and ties the database directly into the Polymer\index{Polymer} data binding system.
 Persisting a change is incredibly easy; 
 writing a new value to a variable not only saves it to the database but pushes the change
-to all other `subscribers' --- whoever is viewing that post or other object at the time.
+to all other `subscribers'---whoever is viewing that post or other object at the time.
 The \tcode{data=} attribute on 
 \tcode{<firebase-element>}\index{<firebase-element>}
 allows binding a variable in a component to a remote database object:
@@ -257,12 +256,12 @@ The \tcode{location=} attribute (the database source URL for this \tcode{<fireba
 is bound to an expression which finds the location with the \tcode{fbLocation} method.
 Any changes in the variables \tcode{firebase\-Location}, \tcode{parentId} or \tcode{postId} will cause \tcode{fbLocation} to be recomputed,
 which could in turn cause \tcode{post} to pull from a different location.
-Notice that \tcode{location=} has the same structure as the resource path in the \tcode{DELETE} example from Listing~\ref{l:rest_delete}.
+Notice that \tcode{location=} has the same structure as the resource path in the \tcode{DELETE} example from~\cref{l:rest_delete}.
 
 DOM events carry state changes up from children to elements above it.
 Polymer provides the \tcode{fire()} method to trigger a named event with extra data attached.
 This is a convenience wrapper since it can be done with pure JavaScript\index{JavaScript}.
-An example of using \tcode{fire()} can be found in the language selection dialog from Figure~\ref{f:lang}.
+An example of using \tcode{fire()} can be found in the language selection dialog from~\cref{f:lang}.
 The language selection UI is handled in the \tcode{<speakur-lang-select>} component,
 which is only concerned with presenting the language chooser and not with handling the actual localization,
 reinforcing separation of concerns.
@@ -288,13 +287,13 @@ domReady: function () {
 A handler in the top level container (\tcode{<speakur-discussion>}\index{<speakur-discussion>}) responds to this named event (\tcode{speakur-locale-change}) and tells the
 internationalization\index{internationalization} component to update the language.
 This in turn sets the \tcode{\textbf{lc}} (locale) property in the base element.
-This property is then used in translation expressions as discussed in section~\ref{sec:i18n} below.
+This property is then used in translation expressions as discussed in~\cref{sec:i18n} below.
 
 \subsection{Data-bound templates}
 Speakur translates internal variables (the model) into visible output with the use of data-bound templates\index{data-bound template}.
 This is similar in effect to the model-view-controller\index{model-view-controller} design pattern.
 As mentioned above, the custom element itself is the `model' and its \tcode{<template>}\index{<template>} is the view.
-This allows embedding variables directly in the HTML\index{HTML} representation of a component as shown in Listing~\ref{l:dbtemplate} and here:
+This allows embedding variables directly in the HTML\index{HTML} representation of a component as shown in~\cref{l:dbtemplate} on~\cpageref{l:dbtemplate} and here:
 
 \begin{lstlisting}[language=HTML5,caption={User interface control with data bindings (edit post link).},label=l:bind_ui,captionpos=below]
 <!-- from speakur-post-footer.html -->
@@ -304,7 +303,7 @@ This allows embedding variables directly in the HTML\index{HTML} representation 
 </div>
 \end{lstlisting}
 
-There are three data bindings with \tcode{\{\{ \}\}} in Listing~\ref{l:bind_ui}:
+There are three data bindings with \tcode{\{\{ \}\}} in~\cref{l:bind_ui}:
 \begin{enumerate}
 \item The \tcode{hidden?=} attribute (provided by Polymer\index{Polymer}) binds to \tcode{canEditPost} to determine if the Edit link should be shown under a post. 
 In other words, is this user allowed to edit this post? If not, hide this Edit \tcode{<div>}.
@@ -362,7 +361,7 @@ These are each structured as boolean expressions (predicates) that determine whe
 Write rules determine whether a given create, modify or delete is allowed. 
 Validate rules are run after a write rule has passed in order to check whether the new version is correctly structured per business rules or requirements.
 Each expression has access to several pre-defined variables including snapshots of the database as it exists both before and after the change would be applied.
-For example, Listing~\ref{l:sec_rule1} shows rules for the \tcode{posts} table.
+For example,~\cref{l:sec_rule1} shows rules for the \tcode{posts} table.
 The \tcode{.write} rule asserts that anyone can create a new post, 
 but modifying an existing post requires that you (\tcode{auth.uid}) are either the post owner or an administrator.
 The \tcode{.validate} rule ensures that all posts contain at least 4 keys: \tcode{threadId}, \tcode{text}, \tcode{author}, and \tcode{timestamp}.
@@ -437,7 +436,7 @@ Another powerful internationalization\index{internationalization} feature is pro
 a general purpose date/time library that also provides date-related localization\index{localization} services.
 Unlike the general UI strings, the date translations are not provided by Speakur\index{Speakur}, but are included in moment.js itself.
 In addition to formatting dates and times (like the time of a post) according to local conventions, 
-it also provides a \tcode{fromNow} function that outputs a localized ``ago'' string --- the amount of time elapsed since a certain point such as ``10 seconds ago'' or ``3 weeks ago''.
+it also provides a \tcode{fromNow} function that outputs a localized ``ago'' string---the amount of time elapsed since a certain point such as ``10 seconds ago'' or ``3 weeks ago''.
 Speakur\index{Speakur} uses this in post headers to show how long ago they were posted,
 and ties them to a timer-based value dependency such that the ``ago time'' updates automatically on the page as time passes. 
 For example, immediately after posting a new reply, its header will say ``posted a few moments ago.'' 
@@ -446,7 +445,7 @@ This text has a tooltip which gives the full localized date such as ``Wednesday,
 
 \section{Device responsive design}
 \label{sec:responsive}
-As mentioned in section~\ref{bg:mobile}, Speakur\index{Speakur} uses several techniques to achieve a design that automatically responds\index{responsive design} to different devices and screen sizes, 
+As mentioned in~\cref{bg:mobile}, Speakur\index{Speakur} uses several techniques to achieve a design that automatically responds\index{responsive design} to different devices and screen sizes, 
 including mobile phones.
 The three main responsive design techniques used in Speakur are:
 \begin{enumerate}
@@ -494,8 +493,7 @@ In a relatively small application like Speakur the difference is not huge, espec
 because the HTML component transfer times are largely dwarfed by the cost of loading the actual discussion from the database.
 Future protocol enhancements like HTTP 2\index{HTTP!HTTP 2.0} may eliminate this discrepancy.
 That said, vulcanization does offer current benefits,
-as shown in 
-Table~\ref{table:speakurloading} which compares the time (in milliseconds) to initially display the Speakur component and then fully load a thread with 25 comments in three popular desktop browsers.
+as shown in~\cref{table:speakurloading} which compares the time (in milliseconds) to initially display the Speakur component and then fully load a thread with 25 comments in three popular desktop browsers.
 These figures partly reflect the degree to which each of these browsers natively supports Web Components\index{Web Components} at this time.
 At the moment Firefox\index{Mozilla!Mozilla Firefox} does not natively support as many Web Component features as Google Chrome\index{Google!Google Chrome} or Opera\index{Opera}, 
 so the polyfill\index{polyfill} must do more work, negatively impacting load times on that browser.
