--- a/latex/chapter-introduction.tex
+++ b/latex/chapter-introduction.tex
@@ -25,15 +25,15 @@ as an experiment to determine the viability and maturity of using Web Components
 Figure~\ref{f:demo1} shows an example of a Speakur discussion.
 
 Like most web applications Speakur is written in a combination of HTML markup and the Java\-Script programming language. 
-HTML is a declarative markup language used to create documents --- web pages --- which are viewed with the help of a program called the browser. 
+HTML is a declarative markup language used to create documents---web pages---which are viewed with the help of a program called the browser. 
 The Hyper\-text Markup Language (HTML) 
 \index{HTML}
-standard has proven wildly successful since its introduction in 1993 by British computer scientist 
+standard has proven wildly successful since its introduction in 1993 by British physicist and computer scientist 
 Tim Berners-Lee, 
 \index{Berners-Lee, Tim}
 with billions and billions of pages served, 
 and hundreds of millions of public and private web sites forming a major part of our information landscape~\cite{internetlivestats.com2015}.
-More than any other invention, other than perhaps email, the World Wide Web (WWW) has shaped how we see and use the global network.
+More than perhaps any other invention, the World Wide Web (WWW) has shaped how we see and use the global network.
 
 \begin{figure}[htb]
 \centering
@@ -42,14 +42,14 @@ More than any other invention, other than perhaps email, the World Wide Web (WWW
 \label{f:demo1}
 \end{figure}
 
-Those designing and programming applications for the Web as a computing platform have long dreamed of the ability to mix and match independent, reusable chunks of functionality --- components --- in their documents without mutual coupling and interference. 
+Those designing and programming applications for the Web as a computing platform have long dreamed of the ability to mix and match independent, reusable chunks of functionality---components---in their documents without mutual coupling and interference. 
 The Document Object Model (DOM)
 \index{DOM}
 browser abstraction does not allow for significant decoupling; 
 everything lives together on one big page. Hacks like the 
 \tcode{<iframe>} 
 \index{<iframe>}
-tag let you work around some of these restrictions, usually in a limited and inelegant way.
+tag let you work around some of these limitations, usually in a inelegant and sometimes insecure fashion.
 
 At the time of HTML's introduction, the concept of quickly and easily composing a static web page, 
 much less a full-fledged dynamic application, 
@@ -58,15 +58,16 @@ The introduction of the
 JavaScript\index{JavaScript}\footnote{JavaScript, also rendered as Javascript or JS, 
 has no significant relationship to Sun's (now Oracle's) popular Java\index{Java} programming language. JavaScript is formally standardized as ECMAScript (ES)\index{ECMAScript (JavaScript)}.}
 (JS)\index{JavaScript} programming language to web browsers in 1995 allowed for a completely new dimension of dynamic behavior that was not possible before~\cite{w3ccontributors2012}.
-Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google!Google Docs}, powered by JavaScript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from nearly anywhere.
-Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts didn't step on each other's toes, else disaster frequently ensued. 
+Eventually web apps like Gmail\index{GMail} and Google Docs\index{Google!Google Docs}, powered by JavaScript, rivaled traditional desktop applications in functionality and usability while being instantly accessible from anywhere with an Internet connection.
+Still, web apps had to be stitched together `by hand' in ways that carefully ensured the different parts did not step on each other's toes, else disaster frequently ensued. 
 Each component or area of the system could not help but be coupled to the others at some level as a result of the programming model imposed by the DOM\index{DOM} and HTML~\cite{ihrig2012}.
 
 Over the years the dynamic behaviors afforded by JavaScript grew in importance along with the web, and helped contribute to its success. 
-JavaScript\index{JavaScript} is now a ubiquitous programming language and has expanded far beyond the desktop web browser. 
-JavaScript interpreters can be found in mobile phones, industrial controllers, and now the embedded devices that comprise the Internet of Things (IoT)\index{Internet of Things (IoT)}~\cite{flaki2015}.
+JavaScript\index{JavaScript} is now a ubiquitous programming language and has expanded far beyond the desktop web client. 
+JavaScript interpreters can be found in web servers, mobile phones, industrial controllers, and now the embedded devices that comprise the Internet of Things (IoT)\index{Internet of Things (IoT)}~\cite{flaki2015}.
 Its flexible, loosely typed nature can be a boon to the prototyping and initial development process,
-but the difficulties of building a large application in the DOM soon became apparent.
+but the difficulties in building a large application in the DOM soon became apparent.
+These problems will be explored in detail in \cref{ch:background}.
 
 Over time, a bewildering array of frameworks and libraries sprang up around the HTML/JS ecosystem to help manage this complexity and to provide scaffolding and structure for the client side of web apps.
 For many years individual JS frameworks seemed to come and go as ephemerally as teenage pop idols~\cite{allenpike2015}. 
@@ -96,7 +97,7 @@ to draft a new standard called \textbf{Web Components} that will extend and enha
 For example, as of the time of this writing, a rewrite of Angular\index{Angular} called Angular 2.0 is slated to include Web Components as a core architectural element~\cite{santiagoesteva2015}.
 
 \section{Web Components overview}
-Fundamentally, the Web Components standard consists of four new core DOM technologies --- extensions to the current HTML5\index{HTML!HTML5} standard.
+Fundamentally, the Web Components standard consists of four new core DOM technologies---extensions to the current HTML5\index{HTML!HTML5} standard.
 If these standards are accepted by major browser vendors and the World Wide Web Consortium (W3C)
 \index{W3C}
 which maintains HTML, 
@@ -106,7 +107,7 @@ The core Web Component technologies are~\cite{penades2015}:
 \item
 \textbf{Custom Elements}\index{Custom Elements}: extending HTML with author-created tags
 \item
-\textbf{Shadow DOM}\index{Shadow DOM}: encapsulation for the internals of custom elements
+\textbf{Shadow DOM}\index{Shadow DOM}: a separate document tree completely internal to an element
 \item
 \textbf{Templates}\index{HTML!Templates}: scaffolding for instantiating blocks of HTML from inert templates
 \item
@@ -122,12 +123,13 @@ and the CSS Flexible Boxes
 \index{Flex} 
 and CSS Grid
 \index{Grid}
-systems. 
+systems~\cite{w3ccontributors2014,w3ccontributors2015-d,mozillacontributors2015}. 
 In part because many of these technologies are not yet formally accepted as W3C standards and are not yet widely implemented in typical mobile and desktop browsers, 
 Speakur\index{Speakur} has been implemented using Google's experimental Polymer\index{Polymer} framework~\cite{polymercontributors2015}.
 Polymer provides a JavaScript `polyfill'
 \index{polyfill}
-library to implement many of the new Web Component features in browsers which would otherwise not support them. 
+library to implement many of the new Web Component features in browsers which would otherwise not support them, 
+similar to the adapter design pattern\index{design patterns}. 
 Eventually this platform polyfill should become unnecessary, in theory, as WC becomes widely adopted in browsers.
 Some browsers like Google Chrome 
 \index{Google!Google Chrome}
@@ -144,20 +146,20 @@ The conversion of dynamic web logic---not mere snippets of plain HTML\index{HTML
 
 The move towards a component-based Web will enable interesting new composite services, mashups, and may help broaden the potential pool of web developers. 
 What previously required a highly integrated, high-overhead development model or lots of tedious glue code can become as simple as importing a custom element and dropping it onto a page.
-
+Integrated development environments (IDEs) and other tools that embrace Web Components will be able to assist content authors by, for example, offering name completion on custom elements and the attributes that form their API.
 
 \section{Structure of this report}
 \index{Structure of This Report@\emph{Structure of This Report}}%
 
 The goal of this report is to demonstrate the application of 
 software engineering\index{software engineering} 
-design patterns embodied in the W3C proposed Web Components standard such as 
+design patterns\index{design patterns} embodied in the W3C proposed Web Components standard such as 
 encapsulating\index{encapsulation} internal logic 
 behind abstraction\index{abstraction} layers, 
 modular composition, 
 and the real-time synchronization of web application state. 
 This report discusses many of the goals and principles of the Web Components initiative and how a number of different technologies taken together help raise the overall level of 
-abstraction\index{abstraction} for content authors, web engineers, and application developers --- which I will refer to collectively as (web) authors for short.
+abstraction\index{abstraction} for content authors, web engineers, and application developers---which I will refer to collectively as (web) authors for short.
 
 The Background section provides an introduction to some of the architectural problems inherent in modern web authoring and how Web Components\index{Web Components} (WC) address them. 
 It also provides some background the on software engineering design patterns that are embodied in Web Components such as encapsulation and composition.
